# realsense_capture_tool

./: .gitignore  capture.py  capture_mp4_ir_left_right_simultaneously.py  generate_realsense_toml.py  ir_left_video_capture.py  pyproject.toml  requirements.txt  toycode_export_ply.py
cfg/: realsense.toml  realsense_toml_template.toml
scripts/: camera_parameter.py  realsense.py  utils.py
