[tool.poetry]
name = "realsense_capture"
version = "0.1.0"
description = ""
authors = ["Yuki Yoshikawa <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "0.10.1"
numpy = "1.19.2"
pyrealsense2 = "2.38.1.2225"
opencv-python = "4.2.0.32"
cvui = "2.7"
click = "7.1.2"
pytz = "2020.1"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
